Fix wrong color value on redactor.css.

--- a/redactor/static/redactor/css/redactor.css
+++ b/redactor/static/redactor/css/redactor.css
@@ -851,7 +851,7 @@ body .redactor-box-fullscreen {
 .redactor-editor h5,
 .redactor-editor h6 {
   font-weight: bold;
-  color: #0000;
+  color: #000;
   padding: 0;
   background: none;
   text-rendering: optimizeLegibility;
